<resources>
    <string name="app_name">RoomPlanner</string>
    <!-- Strings related to login -->
    <string name="prompt_username"> Enter Email</string>
    <string name="prompt_password"> Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be 6–12 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Revature</string>
    <string name="nav_header_subtitle">info@revature.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_assign_batch">Assign Batch</string>
    <string name="menu_batches">Select a Batch</string>
    <string name="menu_rooms">Select a Room</string>
    <string name="menu_trainers">Select a Trainer</string>
    <string name="menu_trainer_info">Trainer Info</string>
    <string name="menu_lookup">Select a Campus</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="email">E-mail</string>
    <string name="reset_pw_title">Reset Password</string>
    <string name="reset_email_description">An e-mail with further instruction will be sent to your email address.</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="reset_pass_title">Reset Password</string>
    <string name="login_reset">Forgot Password?</string>
    <string name="login_signin">Sign In</string>
    <string name="trainerlookup_defaultname">Firstname Lastname</string>
    <string name="trainerlookup_default_email">Email default</string>
    <string name="trainerlookup_default_location">Location default</string>
    <string name="trainerlookup_default_skills">trainer_skills default</string>
    <string name="location_header">Location:</string>
    <string name="email_header">Email:</string>
    <string name="skills_header">Skills:</string>
    <string name="trainer_room_lookup_header">Trainer/Room Lookup</string>
    <string name="select_trainer_header">Revature Trainers</string>
    <string name="plus">+</string>
    <string name="select_trainer_skillset">Skills:</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="nav_menu_assign_batches">Assign Batches</string>
    <string name="nav_menu_lookup">Trainer/Room Lookup</string>
    <string name="nav_menu_account">Account</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="forgot_password_header">Please enter your e-mail</string>
    <string name="login_checkbox">Keep me logged In</string>
    <string name="room_info_header">ROOM 12</string>
    <string name="menu_rooms_info">Room Info</string>
    <string name="search_room_hint">Search for a campus number</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batches_details_associates">Associates: %1$s </string>
    <string name="batch_info_skills_required">Skills Required:</string>
    <string name="batch_info_assign_room">Select Batch</string>
    <string name="room_info_assign_room">Assign Room</string>
    <string name="assign_trainer_submit">Assign to batch</string>
    <string name="submit">submit</string>
    <string name="select_a_location">Select a Location</string>
    <string name="trainer_title">Select a Trainer</string>
    <string name="add_fake_data_btn">Add Fake Data</string>
    <string name="clear_fake_data_button">Clear Fake Data</string>
    <string name="campus_title">Select a Campus</string>
    <string name="menu_campuses">Campuses</string>
    <string name="tab_trainers">Trainers</string>
    <string name="tab_batches">Batches</string>
    <string name="tab_rooms">Rooms</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="campus_location">%1$s, %2$s</string>
    <string name="room_row_building_header">Building:</string>
    <string name="room_row_room_header">Room Number:</string>
    <string name="room_info_max_seats">Max Seats: ##</string>
    <string name="room_info_calender_header">Room Availability</string>
    <string name="batchinfo_skill">Skill Focus:</string>
    <string name="app_version">Version 1.0</string>
    <string name="launch_title">TrainingRoomPlanner</string>
    <string name="transition_batch_to_batch_info_name">batch name %d</string>
    <string name="transition_batch_to_batch_info_associates">Associates</string>
    <string name="transition_batch_to_batch_info_number_of_associates">Number of associates</string>
    <string name="transition_batch_to_batch_info_skills_required">Skills Required</string>
    <string name="transition_batch_to_batch_info_skills_required_recycler_view">Skills required recycler view</string>

</resources>
