<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_menu_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_assignment"
            android:title="@string/menu_assign_batch" />
        <item
            android:id="@+id/navigation_lookup"
            android:title="@string/nav_menu_lookup" />

    </group>
<!--    <group-->
<!--        android:id="@+id/nav_menu_group_middle">-->
<!--        <item-->
<!--            android:id="@+id/nav_help"-->
<!--            android:title="@string/menu_help" />-->
<!--    </group>-->
    <group
        android:id="@+id/nav_menu_group_bottom">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_menu_logout" />
    </group>

    <!--    <item android:title="Communicate">-->
<!--        <menu/>-->
<!--    </item>-->

</menu>
