<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rooms.RoomInfoFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_room_info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room_info_header"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_room_info_location_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_header"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:paddingTop="32dp" />

    <Spinner
        android:id="@+id/spinner_room_info_location"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_room_info_room_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_rooms"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:paddingTop="32dp"/>

    <Spinner
        android:id="@+id/spinner_room_info_room"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>