<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_batches">

    <fragment
        android:id="@+id/nav_batches"
        android:name="com.revature.revaturetrainingroomplanner.ui.batches.BatchesFragment"
        android:label="@string/menu_batches"
        tools:layout="@layout/fragment_batches" >
        <action
            android:id="@+id/action_nav_batches_to_nav_rooms"
            app:destination="@id/nav_rooms"
            app:enterAnim="@anim/fragment_fade_enter" />
        <action
            android:id="@+id/action_nav_batches_to_lookupFragment"
            app:destination="@id/lookupFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.revature.revaturetrainingroomplanner.ui.rooms.RoomsFragment"
        android:label="@string/menu_rooms"
        tools:layout="@layout/fragment_rooms">
        <action
            android:id="@+id/action_nav_rooms_to_nav_rooms_info"
            app:destination="@id/nav_rooms_info"
            app:enterAnim="@anim/fragment_open_enter" />
    </fragment>

    <fragment
        android:id="@+id/nav_rooms_info"
        android:name="com.revature.revaturetrainingroomplanner.ui.rooms.RoomInfoFragment"
        android:label="@string/menu_rooms_info"
        tools:layout="@layout/fragment_rooms" >
        <action
            android:id="@+id/action_nav_rooms_info_to_nav_trainers"
            app:destination="@id/nav_trainers"
            app:enterAnim="@anim/fragment_fade_enter"
            app:popUpTo="@+id/nav_rooms" />
    </fragment>

    <fragment
        android:id="@+id/nav_trainers"
        android:name="com.revature.revaturetrainingroomplanner.ui.trainers.TrainersFragment"
        android:label="@string/menu_trainers"
        tools:layout="@layout/fragment_trainers" >
        <action
            android:id="@+id/action_nav_trainers_to_nav_trainer_info"
            app:destination="@id/nav_trainer_info" />
    </fragment>

    <fragment
        android:id="@+id/nav_trainer_info"
        android:name="com.revature.revaturetrainingroomplanner.ui.trainers.TrainersInfoFragment"
        android:label="@string/menu_trainers"
        tools:layout="@layout/fragment_trainer_info" />
    <fragment
        android:id="@+id/lookupFragment"
        android:name="com.revature.revaturetrainingroomplanner.ui.lookup.LookupFragment"
        android:label="fragment_lookup"
        tools:layout="@layout/fragment_lookup" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.revature.revaturetrainingroomplanner.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />

</navigation>