<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <Button
        android:id="@+id/btn_forgot_password_submit"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/assign_button_style"
        android:fontFamily="@font/arvo_bold"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/revature_orange"
        app:layout_constraintEnd_toEndOf="@+id/et_forgot_password_input"
        app:layout_constraintTop_toBottomOf="@+id/et_forgot_password_input" />

    <TextView
        android:id="@+id/tv_forgot_password_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password_header"
        android:textColor="@color/revature_orange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_title" />

    <TextView
        android:id="@+id/tv_forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password_title"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/revature_logo" />

    <EditText
        android:id="@+id/et_forgot_password_input"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_style"
        android:ems="16"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tv_forgot_password_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:text="@string/reset_email_description"
        android:textColor="@color/revature_orange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password_submit" />

    <ImageView
        android:id="@+id/revature_logo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/revature"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>