<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/et_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rev_logo" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/login_et_style"
        android:hint="@string/prompt_username"
        android:inputType="textWebEmailAddress"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textAlignment="textStart"
        android:textColor="#999999"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_login_user_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/login_et_style"
        android:ems="12"
        android:hint="@string/prompt_password"
        android:inputType="textWebPassword"
        android:maxLength="12"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textAlignment="textStart"
        android:textColor="#999999"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_login_email"
        app:layout_constraintStart_toStartOf="@+id/et_login_email"
        app:layout_constraintTop_toBottomOf="@+id/et_login_email"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_login_signin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/revature_orange"
        android:text="@string/login_signin"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_login_remember_me" />

    <CheckBox
        android:id="@+id/checkbox_login_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_checkbox"
        android:textColor="#5F5F5F"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <ImageView
        android:id="@+id/img_login_pass_icon"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/et_login_password"
        app:layout_constraintEnd_toEndOf="@+id/img_login_user_icon"
        app:layout_constraintStart_toStartOf="@+id/img_login_user_icon"
        app:layout_constraintTop_toTopOf="@+id/et_login_password"
        app:srcCompat="@drawable/lock" />

    <ImageView
        android:id="@+id/img_login_user_icon"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/et_login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_login_email"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/human" />

    <TextView
        android:id="@+id/btn_login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/forgot_pass_button"
        android:clickable="true"
        android:text="@string/login_forgot_password"
        android:textColor="#5C5C5C"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_login_remember_me"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>